# Semantic-Matching

./: .gitignore  README.md  compute_fisher_vectors.py  compute_weight_fisher_vectors.py  generate_config.py  main.py  old_pyproject.toml  preprocess_dataset.py  pyproject.toml  train_gmm.py  train_pca.py  visualize_tsne_image_explorer.py  visualize_viewpoint_polar_explorer.py
notebooks/: gmm_visualization.ipynb  laplacian_identity_recovery.ipynb  matching_quality.ipynb  viewpoint_classification.ipynb
src/: __init__.py
src/codebook/: conditional_fisher_vector.py  gmm_trainer.py  mixture_of_linear_regressions.py
src/config/: __init__.py  base.py  config.py
src/data/: __init__.py  annotation_loader.py  coco_loader.py  fv_dataset.py  preprocessed_dataset.py  wildlife_loader.py
src/evaluation/: __init__.py  detection_matching.py  discriminability.py  reid_metrics.py  texture_diagnostic.py  viewpoint_accuracy.py
src/features/: __init__.py  dedode_extractor.py  dino_extractor.py  dinov3_loader.py  disk_extractor.py  fisher_vector.py  joint_fisher_vector.py  roma_extractor.py  sift_extractor.py
src/laplacian/: __init__.py  angles.py  diagnostics.py  graph.py  spectral.py
src/matching/: __init__.py  patch_matching.py
src/pca/: __init__.py  incremental_pca.py
src/pipeline/: __init__.py  preprocessing_pipeline.py
src/segmentation/: __init__.py  sam3_segmenter.py
src/utils/: batch_storage.py  circular_stats.py  crop_utils.py  memory_monitor.py  sampling_utils.py
src/visualization/: __init__.py  angular_plots.py  fisher_similarity_vis.py  gmm_vis.py  (+7 more)
